[gd_scene load_steps=53 format=3 uid="uid://bn0a3beo2qrae"]

[ext_resource type="Script" path="res://script/player.gd" id="1_awie6"]
[ext_resource type="Texture2D" uid="uid://kot13qpe6ute" path="res://asset/player.png" id="2_mhspr"]
[ext_resource type="AudioStream" uid="uid://bsi706nqo603y" path="res://asset/knifesharpener1.mp3" id="3_6naal"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b54kq"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnewg"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8nw4"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t5t8"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmuiu"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7frr2"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xa35"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr5fb"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xutdl"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2h7h"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_20qn5"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs0qi"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxm2v"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oajmu"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqpd8"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_whnqx"]
atlas = ExtResource("2_mhspr")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0rxm"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_88ilk"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j32wl"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2cdu"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h3v6"]
atlas = ExtResource("2_mhspr")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk5kh"]
atlas = ExtResource("2_mhspr")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwti"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mpvu"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_byyux"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab4pk"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5v14"]
atlas = ExtResource("2_mhspr")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjmui"]
atlas = ExtResource("2_mhspr")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4d1l"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcmkm"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj225"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkfqi"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybfpf"]
atlas = ExtResource("2_mhspr")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p33n"]
atlas = ExtResource("2_mhspr")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_plugn"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kul8"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1a5y"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl74k"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_is67k"]
atlas = ExtResource("2_mhspr")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih0nd"]
atlas = ExtResource("2_mhspr")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce0ao"]
atlas = ExtResource("2_mhspr")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_voor7"]
atlas = ExtResource("2_mhspr")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jdvc"]
atlas = ExtResource("2_mhspr")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhhfl"]
atlas = ExtResource("2_mhspr")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaav1"]
atlas = ExtResource("2_mhspr")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c86w2"]
atlas = ExtResource("2_mhspr")
region = Rect2(240, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_uccuf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b54kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnewg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8nw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t5t8")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmuiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7frr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xa35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr5fb")
}],
"loop": true,
"name": &"attack_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xutdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2h7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20qn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs0qi")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxm2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oajmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqpd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whnqx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0rxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88ilk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j32wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2cdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h3v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk5kh")
}],
"loop": true,
"name": &"idle_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mpvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byyux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab4pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5v14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjmui")
}],
"loop": true,
"name": &"idle_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4d1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcmkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj225")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkfqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybfpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p33n")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plugn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kul8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1a5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl74k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is67k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih0nd")
}],
"loop": true,
"name": &"walk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce0ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voor7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jdvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhhfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaav1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c86w2")
}],
"loop": true,
"name": &"walk_up",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ks8mk"]
size = Vector2(15, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_poe5v"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(61, 40)
collision_layer = 3
script = ExtResource("1_awie6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_uccuf")
animation = &"attack_side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ks8mk")

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(0, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_poe5v")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -7.0
offset_top = 11.0
offset_right = 123.0
offset_bottom = 38.0
scale = Vector2(0.1, 0.1)
max_value = 300.0
show_percentage = false

[node name="regen_time" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="slash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6naal")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_time" to="." method="_on_regen_time_timeout"]
